<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_section1"
            android:title="@string/tv_nav_body_section1" />
        <item
            android:id="@+id/nav_section2"
            android:title="@string/tv_nav_body_section2" />
        <item
            android:id="@+id/nav_section3"
            android:title="@string/tv_nav_body_section3" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:title="@string/tv_nav_body_about" />

        <item
            android:id="@+id/nav_terms"
            android:title="@string/tv_nav_body_terms" />
    </group>

</menu>
